--- a/005_Palindrome_Checker/style.css
+++ b/005_Palindrome_Checker/style.css
@@ -9,7 +9,7 @@ body {
   width: 300px;
   display: flex;
   flex-direction: column;
-
+gap: 1rem;
   justify-content: center;
   align-items: center;
   position: relative;
@@ -18,6 +18,8 @@ body {
 #text-input {
   margin-bottom: 1rem;
   padding: 8px;
+  margin-right: 0.5rem;
+  
 }
 #check-btn {
   padding: 8px;
